# sketches-rs

./: Cargo.toml  README.md
benches/: ddsketch_benchmark.rs
examples/: basic_usage.rs
src/: ddsketch.rs  lib.rs  mapping.rs  store.rs
