[package]
name = "ddsketch-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of DDSketch, a distributed quantile sketch"
repository = "https://github.com/username/ddsketch-rs"
license = "Apache-2.0"
keywords = ["statistics", "quantiles", "sketch", "streaming", "ddsketch"]
categories = ["algorithms", "data-structures", "mathematics"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ddsketch_benchmark"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
